# multi-database-agent-unified

./: .gitignore  ARCHITECTURE_ANSWERS.md  ARCHITECTURE_COMPARISON.md  BUSINESS_DEMO_GUIDE.md  CLEANUP_ANALYSIS.md  DEPLOYMENT.md  Dockerfile  FINAL_IMPLEMENTATION_SUMMARY.md  GITHUB_PUSH_GUIDE.md  LICENSE  README.md  TEST_RESULTS.md  UNIFIED_ARCHITECTURE_SUMMARY.md  api_server.py  chat_ui.py  create_env.py  database_router.py  diagnose_connection.py  docker-compose.yml  example.env  logging_config.py  nginx.conf  pyproject.toml  requirements.txt
mcp_servers/: __init__.py  mongodb_mcp_server.py  oracle_mcp_server.py  unified_mcp_server.py
mongodb_agent/: agent.py  prompt.py  simplified_agent.py  simplified_prompt.py
scripts/: cleanup_legacy_files.py  create_dummy_data.py  demo_agent.py  list_mcp_tools.py  setup.sh  test_agent_with_dummy_data.py  test_connections.py  test_mongodb_mcp.py  test_router.py  test_unified_approach.py
